--- a/MainPage.html
+++ b/MainPage.html
@@ -70,7 +70,7 @@
 <div class="container">
 	<div class="row header">
 		<div class="logo navbar-left">
-			<h1><a href="MainPage.html">Learner </a></h1>
+			<h1><a href="MainPage.html"> School Management </a></h1>
 		</div>
 		<div class="h_search navbar-right">
 			<form>
