--- a/signin.html
+++ b/signin.html
@@ -93,7 +93,7 @@
                         window.location.href="MainPage.html";
                     }
                     }else{
-                        window.location.href="settings.html";
+                        window.location.href="payment.html";
                     }
                 });
 
