--- a/signup.html
+++ b/signup.html
@@ -91,7 +91,7 @@
                         window.location.href="MainPage.html";
                     }
                     }else{
-                        window.location.href="settings.html";
+                        window.location.href="payment.html";
                     }
                 });
 
